# lakegen

./: README.md  pyproject.toml
catalogs/: base.py  iceberg.py  models.py
core/catalog/: __init__.py  base.py  iceberg.py
core/catalogs/: __init__.py  base.py  factory.py  iceberg.py  model.py
core/connection_registry/: __init__.py  registry.py
core/connection_registry/type/: __init__.py  catalog.py
core/credential/: __init__.py  json_store.py  keyring_store.py  model.py  store.py
core/credentials/: __init__.py  json_store.py  keyring_store.py  model.py  store.py
core/error/: __init__.py  base.py  code.py
core/errors/: base.py  codes.py
credentials/: __init__.py  json_store.py  keyring_store.py  model.py  store.py
lakegen/: __init__.py
lakegen/core/catalog/: __init__.py  base.py  iceberg.py  model.py
lakegen/core/connection/: __init__.py  registry.py
lakegen/core/connection_registry/: __init__.py  registry.py
lakegen/core/credential/: __init__.py  helper.py  json_store.py  keyring_store.py  store.py
lakegen/core/error/: __init__.py  base.py  code.py
lakegen/inference/: model.py  protocol.py  registry.py  router.py
lakegen/inference/providers/: openai.py
lakegen/tool/: __init__.py  discovery.py  model.py  registry.py  runtime.py
lakegen/tool/iceberg/: __init__.py  add_catalog_tool.py  (+3 more)
tests/: test_catalog_normalization.py  test_credential_store.py  test_errors.py  test_registry.py  test_runtime.py
tool/: __init__.py  model.py  registry.py
tool/iceberg/: __init__.py  add_catalog_tool.py  iceberg_list_namespaces.py
(+5 files in other folders)
