[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakegen"
version = "0.1.0"
description = "Autonomous AI Agent For Managing Lakehouses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyring>=25.7.0",
    "pyiceberg[glue,pyarrow,s3fs]>=0.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["lakegen"]
